Fix CSS issue: analysis options may cause the sidebar to overflow

--- a/web/static/css/fame.css
+++ b/web/static/css/fame.css
@@ -519,3 +519,10 @@ td > .small {
 .file-name {
   word-break: break-word;
 }
+
+.sidebar .sidebar-wrapper {
+  overflow-y: auto;
+}
+#sidebar-nav {
+  height: auto;
+}
